fix: temporary build Docker and deploy from develop branch too

--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -2,7 +2,7 @@ name: Build and Publish Docker Images
 
 on:
     push:
-        branches: master
+        branches: [develop,master]
 
 jobs:
     ever-api:
