--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -3,7 +3,7 @@ name: Deploy to DigitalOcean
 on:
     workflow_run:
         workflows: ['Build and Publish Docker Images']
-        branches: [master]
+        branches: [develop,master]
         types:
             - completed
 
