feat: more progress towards Docker / DO deployments

--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -37,7 +37,7 @@ jobs:
               uses: docker/build-push-action@v2
               with:
                   context: .
-                  file: ./.deploy/core/Dockerfile
+                  file: ./.deploy/api/Dockerfile
                   load: true
                   tags: |
                       ghcr.io/ever-co/ever-api:latest
