--- a/packages/merchant-tablet-ionic/package.json
+++ b/packages/merchant-tablet-ionic/package.json
@@ -6,10 +6,10 @@
 	"homepage": "https://ever.co",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ever-co/ever.git"
+		"url": "https://github.com/ever-co/ever-demand.git"
 	},
 	"bugs": {
-		"url": "https://github.com/ever-co/ever/issues"
+		"url": "https://github.com/ever-co/ever-demand/issues"
 	},
 	"private": false,
 	"author": {
@@ -164,7 +164,7 @@
 		"ngx-masonry": "^1.1.4",
 		"ngx-moment": "^3.4.0",
 		"ngx-pagination": "^4.1.0",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.14.1",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"pm2": "^4.2.1",
 		"qrcode": "^1.4.1",
