--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -6,10 +6,10 @@
 	"homepage": "https://ever.co",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ever-co/ever.git"
+		"url": "https://github.com/ever-co/ever-demand.git"
 	},
 	"bugs": {
-		"url": "https://github.com/ever-co/ever/issues"
+		"url": "https://github.com/ever-co/ever-demand/issues"
 	},
 	"private": false,
 	"author": {
@@ -136,7 +136,7 @@
 		"ngx-moment": "^3.4.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
 		"ngx-useful-swiper": "9.0.3",
-		"node-sass": "^4.12.0",
+		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
 		"pm2": "^4.2.1",
