--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -6,10 +6,10 @@
 	"homepage": "https://ever.co/",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ever-co/ever.git"
+		"url": "https://github.com/ever-co/ever-demand.git"
 	},
 	"bugs": {
-		"url": "https://github.com/ever-co/ever/issues"
+		"url": "https://github.com/ever-co/ever-demand/issues"
 	},
 	"private": false,
 	"author": {
@@ -149,7 +149,7 @@
 		"mquery": "^3.2.0",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"neo-async": "^2.6.1",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.14.1",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"pm2": "^4.2.1",
 		"qrcode": "^1.4.1",
