--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -6,10 +6,10 @@
 	"homepage": "https://ever.co",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ever-co/ever.git"
+		"url": "https://github.com/ever-co/ever-demand.git"
 	},
 	"bugs": {
-		"url": "https://github.com/ever-co/ever/issues"
+		"url": "https://github.com/ever-co/ever-demand/issues"
 	},
 	"private": false,
 	"author": {
