--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -17,18 +17,6 @@
 		"email": "ever@ever.co",
 		"url": "https://ever.co"
 	},
-	"contributors": [
-		{
-			"name": "Ruslan Konviser (Evereq)",
-			"email": "ruslan@ever.co",
-			"url": "https://ever.co"
-		},
-		{
-			"name": "Misha Konviser (Komish)",
-			"email": "michael@ever.co",
-			"url": "https://ever.co"
-		}
-	],
 	"scripts": {
 		"ng:dev": "cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=4096 yarn ng",
 		"ng:prod": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 yarn ng",
@@ -106,101 +94,101 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.1.0",
-		"@angular/animations": "^9.1.1",
-		"@angular/cdk": "^9.1.3",
-		"@angular/common": "^9.1.1",
-		"@angular/compiler": "^9.1.1",
-		"@angular/core": "^9.1.1",
-		"@angular/forms": "^9.1.1",
-		"@angular/language-service": "^9.1.1",
-		"@angular/material": "^9.2.0",
-		"@angular/platform-browser": "^9.1.1",
-		"@angular/platform-browser-dynamic": "^9.1.1",
-		"@angular/platform-server": "^9.1.1",
-		"@angular/router": "^9.1.1",
-		"@angular/service-worker": "^9.1.1",
+		"@angular/animations": "^12.2.10",
+		"@angular/cdk": "^12.2.10",
+		"@angular/common": "^12.2.10",
+		"@angular/compiler": "^12.2.10",
+		"@angular/core": "^12.2.10",
+		"@angular/forms": "^12.2.10",
+		"@angular/language-service": "^12.2.10",
+		"@angular/material": "^12.2.10",
+		"@angular/platform-browser": "^12.2.10",
+		"@angular/platform-browser-dynamic": "^12.2.10",
+		"@angular/platform-server": "^12.2.10",
+		"@angular/router": "^12.2.10",
+		"@angular/service-worker": "^12.2.10",
 		"@ever-platform/common": "file:../common",
 		"@ever-platform/common-angular": "file:../common-angular",
-		"@fortawesome/angular-fontawesome": "^0.4.0",
-		"@fortawesome/fontawesome-free": "^5.10.0",
-		"@fortawesome/fontawesome-svg-core": "^1.2.19",
-		"@fortawesome/free-brands-svg-icons": "^5.9.0",
-		"@fortawesome/free-regular-svg-icons": "^5.9.0",
-		"@fortawesome/free-solid-svg-icons": "^5.9.0",
-		"@ngx-translate/core": "^11.0.1",
-		"@ngx-translate/http-loader": "^4.0.0",
+		"@fortawesome/angular-fontawesome": "^0.9.0",
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-regular-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@ngx-translate/core": "^13.0.0",
+		"@ngx-translate/http-loader": "^6.0.0",
 		"@types/googlemaps": "^3.30.16",
-		"apollo-angular": "^1.6.0",
+		"apollo-angular": "^2.6.0",
 		"apollo-angular-link-http": "^1.11.0",
 		"apollo-angular-link-http-common": "^1.10.0",
-		"apollo-cache-inmemory": "^1.6.2",
-		"apollo-client": "^2.6.2",
-		"apollo-link-context": "^1.0.14",
-		"bootstrap": "^4.3.1",
+		"apollo-cache-inmemory": "^1.6.6",
+		"apollo-client": "^2.6.10",
+		"apollo-link-context": "^1.0.20",
+		"bootstrap": "^4.6.0",
 		"browser-detect": "^0.2.28",
-		"bson-objectid": "^1.2.4",
+		"bson-objectid": "^2.0.1",
 		"classlist.js": "^1.1.20150312",
-		"core-js": "^3.1.3",
-		"css-element-queries": "^1.2.1",
+		"core-js": "^3.18.3",
+		"css-element-queries": "^1.2.3",
 		"fstream": "^1.0.12",
-		"graphql": "^14.1.1",
-		"graphql-tag": "^2.10.1",
-		"handlebars": "^4.1.2",
-		"http-server": "^0.11.1",
+		"graphql": "^15.6.1",
+		"graphql-tag": "^2.12.5",
+		"handlebars": "^4.7.7",
+		"http-server": "^13.0.2",
 		"ie-shim": "^0.1.0",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.21",
 		"lodash.mergewith": "^4.6.2",
 		"lodash.template": "^4.5.0",
 		"lodash.templatesettings": "^4.2.0",
 		"masonry-layout": "^4.2.2",
 		"mdi-svg": "^2.2.43",
-		"neo-async": "^2.6.1",
-		"ng-lazyload-image": "^6.0.0",
-		"ngx-drag-scroll": "^7.1.3",
-		"ngx-hm-carousel": "^1.6.5-bata.1",
-		"ngx-infinite-scroll": "^7.0.1",
-		"ngx-toastr": "^10.0.4",
-		"pm2": "^4.2.1",
+		"neo-async": "^2.6.2",
+		"ng-lazyload-image": "^9.1.0",
+		"ngx-drag-scroll": "^7.4.3",
+		"ngx-hm-carousel": "^2.0.1",
+		"ngx-infinite-scroll": "^10.0.1",
+		"ngx-toastr": "^14.1.3",
+		"pm2": "^5.1.2",
 		"http-proxy": "^1.18.1",
-		"follow-redirects": "^1.13.0",
+		"follow-redirects": "^1.14.4",
 		"eventemitter3": "^4.0.7",
-		"raw-loader": "1.0.0",
+		"raw-loader": "4.0.2",
 		"reflect-metadata": "^0.1.13",
-		"rxjs": "^6.5.2",
-		"rxjs-compat": "^6.5.2",
-		"sass": "^1.17.2",
+		"rxjs": "^7.4.0",
+		"rxjs-compat": "^6.6.7",
+		"sass": "^1.43.2",
 		"sass-extract": "^2.1.0",
 		"sass-extract-loader": "^1.1.0",
-		"socket.io-client": "^2.2.0",
-		"stripe": "^7.0.0",
-		"terser-webpack-plugin": "^3.0.1",
-		"tslib": "^1.10.0",
-		"uglify-js": "^3.6.0",
-		"uuid": "^3.3.2",
+		"socket.io-client": "^4.3.0",
+		"stripe": "^8.183.0",
+		"terser-webpack-plugin": "^5.2.4",
+		"tslib": "^2.3.1",
+		"uglify-js": "^3.14.2",
+		"uuid": "^8.3.2",
 		"web-animations-js": "^2.3.2",
-		"zone.js": "~0.10.2"
+		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.901.1",
-		"@angular-devkit/build-optimizer": "^0.901.1",
-		"@angular/cli": "^9.1.1",
-		"@angular/compiler-cli": "^9.1.1",
-		"@ngtools/webpack": "^9.1.0",
-		"@types/jasmine": "~3.5.0",
-		"@types/jasminewd2": "~2.0.3",
-		"@types/node": "^12.11.1",
-		"codelyzer": "^5.1.2",
-		"jasmine-core": "~3.5.0",
-		"jasmine-spec-reporter": "~4.2.1",
-		"karma": "~4.3.0",
+		"@angular-devkit/build-angular": "^12.2.10",
+		"@angular-devkit/build-optimizer": "^0.1202.10",
+		"@angular/cli": "^12.2.10",
+		"@angular/compiler-cli": "^12.2.10",
+		"@ngtools/webpack": "^12.2.10",
+		"@types/jasmine": "~3.9.1",
+		"@types/jasminewd2": "~2.0.10",
+		"@types/node": "^16.11.0",
+		"codelyzer": "^6.0.2",
+		"jasmine-core": "~3.10.0",
+		"jasmine-spec-reporter": "~7.0.0",
+		"karma": "~6.3.4",
 		"karma-chrome-launcher": "~3.1.0",
-		"karma-coverage-istanbul-reporter": "~2.1.0",
-		"karma-jasmine": "~2.0.1",
-		"karma-jasmine-html-reporter": "^1.4.2",
-		"protractor": "~5.4.3",
-		"ts-node": "~8.3.0",
-		"tslint": "~5.18.0",
-		"typescript": "~3.7.5"
+		"karma-coverage-istanbul-reporter": "~3.0.3",
+		"karma-jasmine": "~4.0.1",
+		"karma-jasmine-html-reporter": "^1.7.0",
+		"protractor": "~7.0.0",
+		"ts-node": "~10.3.0",
+		"tslint": "~5.20.1",
+		"typescript": "~4.4.4"
 	},
 	"engines": {
 		"node": ">=14.4.0",
