--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -81,6 +81,9 @@
 		"graphql-playground-middleware-express": "^1.7.22",
 		"graphql-subscriptions": "^1.2.1",
 		"graphql-tools": "^8.2.0",
+		"@graphql-tools/load-files": "^6.5.1",
+		"@graphql-tools/schema": "^8.2.0",
+		"@graphql-tools/merge": "^8.1.2",
 		"handlebars": "^4.7.7",
 		"image-size": "^1.0.0",
 		"install": "^0.13.0",
