fix: make server (API) run

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,11 +66,16 @@
 	"vsicons.presets.nestjs": true,
 	"cSpell.words": [
 		"AGPL",
+		"CQRS",
 		"entrypoint",
 		"envalid",
 		"esnext",
+		"GQLPORT",
 		"inversify",
+		"KEYMETRICS",
+		"LINKEDIN",
 		"logpath",
+		"MIXPANEL",
 		"mongod",
 		"mongodb",
 		"pyro",
