--- a/packages/shop-web-angular/tsconfig.json
+++ b/packages/shop-web-angular/tsconfig.json
@@ -35,8 +35,7 @@
 		}
 	},
 	"angularCompilerOptions": {
-		"skipMetadataEmit": true,
-		"enableIvy": false
+		"skipMetadataEmit": true
 	},
 	"include": [
 		"./src",
