--- a/packages/shop-web-angular/tsconfig.webpack.json
+++ b/packages/shop-web-angular/tsconfig.webpack.json
@@ -28,8 +28,7 @@
 		}
 	},
 	"angularCompilerOptions": {
-		"skipMetadataEmit": true,
-		"enableIvy": false
+		"skipMetadataEmit": true
 	},
 	"include": [
 		"./src",
