--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "ever-platform",
-	"description": "Ever Platform",
-	"license": "AGPL-3.0",
+	"name": "ever-demand",
 	"version": "0.4.1",
+	"description": "Ever Demand - Open-Source Commerce Platform for On-Demand Economy and Digital Marketplaces",
+	"license": "AGPL-3.0",
 	"homepage": "https://ever.co",
 	"repository": {
 		"type": "git",
@@ -18,6 +18,7 @@
 		"url": "https://ever.co"
 	},
 	"scripts": {
+		"prepare:husky": "npx husky install .husky",
 		"bootstrap": "yarn install && yarn lerna bootstrap",
 		"build": "yarn run build:common && yarn lerna run --parallel build",
 		"watch": "yarn lerna run --parallel watch",
@@ -50,9 +51,14 @@
 		"snyk-protect": "snyk protect"
 	},
 	"resolutions": {
-		"node-sass": "^6.0.1"
+		"node-sass": "^6.0.1",
+		"@angular-devkit/build-angular": "~12.2.7",
+		"@angular-devkit/architect": "^0.1202.7",
+		"@angular-devkit/core": "^12.2.7",
+		"rxjs": "^7.4.0"
 	},
 	"dependencies": {
+		"node-sass": "^6.0.1",
 		"@angular/animations": "^12.2.10",
 		"@angular/common": "^12.2.10",
 		"@angular/compiler": "^12.2.10",
@@ -63,6 +69,9 @@
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
+		"rxjs": "^7.4.0",
+		"ng2-smart-table": "^1.7.2",
+		"unleash": "^2.0.2",
 		"@ionic-native/barcode-scanner": "^5.36.0",
 		"@ionic-native/call-number": "^5.36.0",
 		"@ionic-native/camera": "^5.36.0",
@@ -85,7 +94,7 @@
 		"@ionic/angular": "^5.8.4",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^3.0.6",
-		"@ngx-progressbar/core": "^5.3.2",
+		"ngx-progressbar": "^6.1.1",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
 		"apollo-angular": "^2.6.0",
@@ -126,7 +135,6 @@
 		"graphql": "^15.6.1",
 		"graphql-tag": "^2.12.5",
 		"handlebars": "^4.7.7",
-		"node-sass": "^6.0.1",
 		"ionicons": "^5.5.3",
 		"jasmine": "^3.10.0",
 		"jsbarcode": "^3.11.5",
@@ -137,7 +145,6 @@
 		"phonegap-plugin-barcodescanner": "^8.1.0",
 		"qrcode": "^1.4.4",
 		"reflect-metadata": "^0.1.13",
-		"rxjs": "^7.4.0",
 		"sass-loader": "^12.2.0",
 		"save": "^2.4.0",
 		"socket.io-client": "^4.3.0",
@@ -150,13 +157,19 @@
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
+		"@angular-devkit/architect": "^0.1202.7",
+		"@angular-devkit/build-angular": "~12.2.7",
+		"@angular-devkit/core": "^12.2.7",
+		"@angular-devkit/schematics": "^12.2.7",
+		"@angular-eslint/eslint-plugin": "~1.0.0",
+		"@angular-eslint/eslint-plugin-template": "~1.0.0",
+		"@angular/cli": "^12.2.10",
+		"@angular/compiler-cli": "~12.2.10",
 		"@commitlint/cli": "^13.2.1",
 		"@commitlint/config-conventional": "^13.2.0",
 		"@commitlint/config-lerna-scopes": "^13.2.0",
 		"@commitlint/travis-cli": "^13.2.1",
 		"@compodoc/compodoc": "^1.1.15",
-		"@angular/cli": "^12.2.10",
-		"@angular/compiler-cli": "~12.2.10",
 		"@ionic/angular-toolkit": "^4.0.0",
 		"@ionic/app-scripts": "^3.2.4",
 		"@ionic/lab": "^3.2.10",
@@ -193,7 +206,6 @@
 		"conventional-changelog": "^3.1.24",
 		"conventional-changelog-cli": "^2.1.1",
 		"conventional-changelog-core": "^4.2.4",
-		"copy-webpack-plugin": "^9.0.1",
 		"coveralls": "^3.1.1",
 		"cpr": "^3.0.1",
 		"cross-env": "^7.0.3",
@@ -267,40 +279,26 @@
 		"tslint-loader": "^3.6.0",
 		"typedoc": "^0.22.5",
 		"typemoq": "^2.1.0",
-		"typescript": "4.4.4",
+		"typescript": "~4.2.4",
+		"yargs": "^17.2.1",
 		"typescript-tslint-plugin": "^1.0.1",
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^4.1.1",
 		"wait-on": "^6.0.0",
-		"webpack": "5.58.2",
-		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack": "^5.58.2",
 		"webpack-cli": "^4.9.0",
+		"webpack-merge": "^5.8.0",
+		"copy-webpack-plugin": "^9.0.1",
+		"webpack-node-externals": "^3.0.0",
 		"webpack-dev-middleware": "^5.2.1",
 		"webpack-dev-server": "^4.3.1",
 		"webpack-graphql-loader": "^1.0.2",
 		"webpack-inline-manifest-plugin": "^4.0.1",
-		"webpack-merge": "^5.8.0",
-		"webpack-node-externals": "^3.0.0",
-		"yargs": "^17.2.1"
-	},
-	"workspaces": {
-		"packages": [
-			"packages/*"
-		],
-		"nohoist": [
-			"**/@nebular",
-			"**/@nebular/**",
-			"**/@angular",
-			"**/@angular/**",
-			"**/@ever-co",
-			"**/@ever-co/**",
-			"**/@ngx-translate",
-			"**/@ngx-translate/**"
-		]
+		"webpack-bundle-analyzer": "^4.5.0"
 	},
 	"config": {
 		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
+			"path": "cz-conventional-changelog"
 		}
 	},
 	"commitlint": {
@@ -312,13 +310,53 @@
 	"husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-			"post-commit": "git update-index --again",
 			"pre-commit": "pretty-quick --no-verify --staged"
 		}
+	},
+	"lint-staged": {},
+	"release": {
+		"verifyConditions": [
+			"@semantic-release/changelog",
+			"@semantic-release/npm",
+			"@semantic-release/git",
+			"@semantic-release/github"
+		],
+		"prepare": [
+			"@semantic-release/changelog",
+			"@semantic-release/npm",
+			"@semantic-release/git"
+		],
+		"publish": [
+			"@semantic-release/github"
+		],
+		"generateNotes": {
+			"preset": "angular"
+		},
+		"npmPublish": false
+	},
+	"workspaces": {
+		"packages": [
+			"packages/*"
+		],
+		"nohoist": [
+			"**/@types/jasmine",
+			"**/@types/jasminewd2",
+			"**/@nebular",
+			"**/@angular*/**",
+			"**/@ngtools/**",
+			"**/@ever-co",
+			"**/@ever-co/**",
+			"**/@ngx-translate",
+			"**/@ngx-translate/**"
+		]
 	},
 	"engines": {
 		"node": ">=14.4.0",
 		"yarn": ">=1.13.0"
 	},
-	"snyk": false
+	"snyk": true,
+	"xplat": {
+		"prefix": "ever",
+		"framework": "angular"
+	}
 }
