--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -78,7 +78,7 @@
 		"@ionic/angular": "^5.8.4",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^3.0.6",
-		"@ngx-progressbar/core": "^5.3.2",
+		"ngx-progressbar": "^6.1.1",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
 		"apollo-angular": "^2.6.0",
@@ -137,7 +137,6 @@
 		"mquery": "^4.0.0",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"neo-async": "^2.6.2",
-		"node-sass": "^6.0.1",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"pm2": "^5.1.2",
 		"qrcode": "^1.4.4",
@@ -184,7 +183,7 @@
 		"protractor": "~7.0.0",
 		"ts-node": "~10.3.0",
 		"tslint": "~5.20.1",
-		"typescript": "~4.4.4"
+		"typescript": "~4.2.4"
 	},
 	"config": {
 		"ionic_webpack": "./config/webpack.config.js"
