--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -114,16 +114,18 @@
 		"moment": "^2.29.1",
 		"ng-simple-slideshow": "^1.2.9",
 		"ng2-ckeditor": "^1.3.4",
-		"@akveo/ng2-completer": "9.0.1",
 		"ng2-file-upload": "^1.4.0",
 		"ng2-simple-timer": "^11.2.9",
+		"angular2-uuid": "^1.1.1",
 		"ng2-smart-table": "^1.7.2",
+		"ng2-completer": "^9.0.1",
 		"ng2-tree": "^2.0.0-rc.11",
 		"ngx-echarts": "^7.0.2",
+		"@juggle/resize-observer": "^3.3.1",
 		"ngx-highlightjs": "^5.0.0",
 		"ngx-moment": "^5.0.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
-		"ngx-useful-swiper": "10.0.1",
+		"swiper": "^7.0.8",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.2.4",
 		"pm2": "^5.1.2",
@@ -137,7 +139,6 @@
 		"socket.io-client": "^4.3.0",
 		"stripe": "^8.183.0",
 		"subscriptions-transport-ws": "^0.9.19",
-		"swiper": "^7.0.8",
 		"tinymce": "^5.10.0",
 		"tslib": "^2.3.1",
 		"typeface-exo": "^1.1.13",
