--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -51,24 +51,26 @@
 	"dependencies": {
 		"@agm/core": "^1.1.0",
 		"@angular/animations": "^12.2.10",
+		"@angular/cdk": "^12.2.10",
 		"@angular/common": "^12.2.10",
+		"@angular/compiler": "^12.2.10",
 		"@angular/core": "^12.2.10",
 		"@angular/forms": "^12.2.10",
+		"@angular/language-service": "^12.2.10",
 		"@angular/platform-browser": "^12.2.10",
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
-		"@angular/language-service": "^12.2.10",
-		"@angular/compiler": "^12.2.10",
-		"@angular/cdk": "^12.2.10",
+		"@asymmetrik/ngx-leaflet": "^8.1.0",
+		"@ever-co/angular2-wizard": "^0.3.1",
+		"@ever-platform/common": "file:../common",
+		"@ever-platform/common-angular": "file:../common-angular",
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@juggle/resize-observer": "^3.3.1",
 		"@nebular/auth": "^8.0.0",
 		"@nebular/bootstrap": "^8.0.0",
 		"@nebular/eva-icons": "^8.0.0",
 		"@nebular/security": "^8.0.0",
 		"@nebular/theme": "^8.0.0",
-		"@asymmetrik/ngx-leaflet": "^8.1.0",
-		"@ever-platform/common": "file:../common",
-		"@ever-platform/common-angular": "file:../common-angular",
-		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@ng-bootstrap/ng-bootstrap": "^10.0.0",
 		"@ng-select/ng-select": "^7.3.0",
 		"@ngx-translate/core": "^13.0.0",
@@ -78,7 +80,7 @@
 		"angular-tree-component": "^8.3.0",
 		"angular2-chartjs": "^0.5.1",
 		"angular2-toaster": "^11.0.1",
-		"@ever-co/angular2-wizard": "^0.3.1",
+		"angular2-uuid": "^1.1.1",
 		"apollo-angular": "^2.6.0",
 		"apollo-angular-link-http": "^1.11.0",
 		"apollo-angular-link-http-common": "^1.10.0",
@@ -114,18 +116,16 @@
 		"moment": "^2.29.1",
 		"ng-simple-slideshow": "^1.2.9",
 		"ng2-ckeditor": "^1.3.4",
+		"ng2-completer": "^9.0.1",
 		"ng2-file-upload": "^1.4.0",
 		"ng2-simple-timer": "^11.2.9",
-		"angular2-uuid": "^1.1.1",
 		"ng2-smart-table": "^1.7.2",
-		"ng2-completer": "^9.0.1",
 		"ng2-tree": "^2.0.0-rc.11",
 		"ngx-echarts": "^7.0.2",
-		"@juggle/resize-observer": "^3.3.1",
 		"ngx-highlightjs": "^5.0.0",
 		"ngx-moment": "^5.0.0",
+		"ngx-swiper-wrapper": "^10.0.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
-		"swiper": "^7.0.8",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.2.4",
 		"pm2": "^5.1.2",
@@ -150,22 +150,22 @@
 	"devDependencies": {
 		"@angular-builders/custom-webpack": "^12.1.3",
 		"@angular-devkit/architect": "^0.1202.10",
+		"@angular-devkit/build-angular": "^12.2.10",
 		"@angular-devkit/build-optimizer": "^0.1202.10",
 		"@angular-devkit/build-webpack": "^0.1202.10",
 		"@angular-devkit/core": "^12.2.10",
 		"@angular-devkit/schematics": "^12.2.10",
-		"@angular-devkit/build-angular": "^12.2.10",
 		"@angular/cli": "^12.2.10",
 		"@angular/compiler-cli": "~12.2.10",
-		"@types/node": "^16.11.0",
-		"@types/jasmine": "~3.9.1",
-		"@types/jasminewd2": "~2.0.10",
 		"@storybook/addon-actions": "^6.3.12",
 		"@storybook/addon-knobs": "^6.3.1",
 		"@storybook/addon-links": "^6.3.12",
 		"@storybook/addon-notes": "^5.3.21",
 		"@storybook/addons": "^6.3.12",
 		"@storybook/angular": "^6.3.12",
+		"@types/jasmine": "~3.9.1",
+		"@types/jasminewd2": "~2.0.10",
+		"@types/node": "^16.11.0",
 		"codelyzer": "^6.0.2",
 		"jasmine-core": "~3.10.0",
 		"jasmine-spec-reporter": "~7.0.0",
@@ -175,6 +175,7 @@
 		"karma-jasmine": "~4.0.1",
 		"karma-jasmine-html-reporter": "^1.7.0",
 		"protractor": "~7.0.0",
+		"swiper": "6.4.15",
 		"ts-node": "~10.3.0",
 		"tslint": "~5.20.1",
 		"typescript": "~4.2.4"
