fix: highlight syntax

--- a/packages/admin-web-angular/angular.json
+++ b/packages/admin-web-angular/angular.json
@@ -28,6 +28,9 @@
 								"output": "/assets/img/markers"
 							}
 						],
+						"allowedCommonJsDependencies": [
+							"highlight.js"
+						],
 						"styles": [
 							"../../node_modules/bootstrap/dist/css/bootstrap.css",
 							"../../node_modules/typeface-exo/index.css",
@@ -39,7 +42,8 @@
 							"../../node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
 							"../../node_modules/leaflet/dist/leaflet.css",
 							"src/app/@theme/styles/styles.scss",
-							"./node_modules/swiper/swiper-bundle.css"
+							"./node_modules/swiper/swiper-bundle.css",
+							"../../node_modules/highlight.js/styles/github.css"
 						],
 						"stylePreprocessorOptions": {
 							"includePaths": ["src/app", "src/assets"]
