fix: added ionic storage angular package

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"@ionic/angular": "^5.8.4",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^3.0.6",
+		"@ionic/storage-angular": "^3.0.6",
 		"ngx-progressbar": "^6.1.1",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
