--- a/packages/merchant-tablet-ionic/package.json
+++ b/packages/merchant-tablet-ionic/package.json
@@ -55,6 +55,7 @@
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
+		"@ever-co/angular2-wizard": "^0.5.6",
 		"@ever-platform/common": "file:../common",
 		"@ever-platform/common-angular": "file:../common-angular",
 		"@ionic-native/barcode-scanner": "^5.36.0",
@@ -83,10 +84,10 @@
 		"@ionic/angular": "^5.8.4",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^3.0.6",
+		"@ionic/storage-angular": "^3.0.6",
 		"@ng-select/ng-select": "^7.3.0",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
-		"@ever-co/angular2-wizard": "^0.5.6",
 		"apollo-angular": "^2.6.0",
 		"apollo-angular-link-http": "^1.11.0",
 		"apollo-angular-link-http-common": "^1.10.0",
@@ -146,9 +147,9 @@
 		"mongoose": "^6.0.11",
 		"mx.ferreyra.callnumber": "^0.0.2",
 		"neo-async": "^2.6.2",
+		"ng2-completer": "^9.0.1",
 		"ng2-file-upload": "^1.4.0",
 		"ng2-smart-table": "^1.7.2",
-		"ng2-completer": "^9.0.1",
 		"ngx-masonry": "^12.0.0",
 		"ngx-moment": "^5.0.0",
 		"ngx-pagination": "^5.1.1",
