--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,36 +4,42 @@
 		"composite": false,
 		"declaration": false,
 		"declarationMap": false,
+		"downlevelIteration": true,
+		"forceConsistentCasingInFileNames": true,
 		"sourceMap": true,
 		"importHelpers": true,
+		"target": "es2016",
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"baseUrl": "./",
 		"rootDir": "./",
-		"noUnusedLocals": false,
 		"noLib": false,
-		"noImplicitAny": false,
 		"skipLibCheck": true,
+		"skipDefaultLibCheck": true,
 		"strictNullChecks": false,
 		"removeComments": true,
-		"lib": ["es2017", "dom", "esnext.asynciterable"],
+		"lib": ["dom", "es2018", "esnext.array", "esnext.asynciterable"],
 		"plugins": [
 			{
 				"name": "tslint-language-service"
 			}
 		],
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"emitDecoratorMetadata": true,
 		"preserveConstEnums": true,
+		"allowSyntheticDefaultImports": true,
+		"noUnusedLocals": false,
+		"noImplicitAny": false,
+		"esModuleInterop": false,
+		"resolveJsonModule": true,
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"target": "es5",
 		"typeRoots": ["node_modules/@types"]
 	},
 	"files": ["node_modules/@types/node/index.d.ts"],
 	"exclude": [
+		"coverage/**/*",
+		"tmp",
 		"node_modules",
-		"dist",
+		"dist/**/*",
 		"build",
 		"lib",
 		"test",
