fix: uses package version via lerna

--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -54,8 +54,8 @@
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
-		"@ever-platform/common": "file:../common",
-		"@ever-platform/common-angular": "file:../common-angular",
+		"@ever-platform/common": "0.4.1",
+		"@ever-platform/common-angular": "0.4.1",
 		"@ionic-native/barcode-scanner": "^5.36.0",
 		"@ionic-native/call-number": "^5.36.0",
 		"@ionic-native/camera": "^5.36.0",
