--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -62,8 +62,8 @@
 		"@angular/router": "^12.2.10",
 		"@asymmetrik/ngx-leaflet": "^8.1.0",
 		"@ever-co/angular2-wizard": "^0.6.2",
-		"@ever-platform/common": "file:../common",
-		"@ever-platform/common-angular": "file:../common-angular",
+		"@ever-platform/common": "0.4.1",
+		"@ever-platform/common-angular": "0.4.1",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@juggle/resize-observer": "^3.3.1",
 		"@nebular/auth": "^8.0.0",
