--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -107,8 +107,8 @@
 		"@angular/platform-server": "^12.2.10",
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
-		"@ever-platform/common": "file:../common",
-		"@ever-platform/common-angular": "file:../common-angular",
+		"@ever-platform/common": "0.4.1",
+		"@ever-platform/common-angular": "0.4.1",
 		"@fortawesome/angular-fontawesome": "^0.9.0",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
