--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
 	"name": "@ever-platform/core",
 	"description": "Ever Platform Headless Framework",
 	"license": "AGPL-3.0",
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"homepage": "https://ever.co",
 	"repository": {
 		"type": "git",
@@ -40,7 +40,7 @@
 	},
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.4.2",
-		"@ever-platform/common": "0.4.2",
+		"@ever-platform/common": "^0.4.2",
 		"@nestjs/common": "^8.1.1",
 		"@nestjs/core": "^8.1.1",
 		"@nestjs/cqrs": "^8.0.0",
