--- a/packages/carrier-mobile-ionic/package.json
+++ b/packages/carrier-mobile-ionic/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ever-platform/carrier-mobile-ionic",
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"description": "Ever Carrier Mobile App",
 	"license": "GPL-3.0",
 	"homepage": "https://ever.co/",
@@ -54,8 +54,8 @@
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
-		"@ever-platform/common": "0.4.2",
-		"@ever-platform/common-angular": "0.4.1",
+		"@ever-platform/common": "^0.4.2",
+		"@ever-platform/common-angular": "^0.4.2",
 		"@ionic-native/barcode-scanner": "^5.36.0",
 		"@ionic-native/call-number": "^5.36.0",
 		"@ionic-native/camera": "^5.36.0",
