--- a/packages/merchant-tablet-ionic/package.json
+++ b/packages/merchant-tablet-ionic/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ever-platform/merchant-tablet-ionic",
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"description": "Ever Merchant Tablet App",
 	"license": "AGPL-3.0",
 	"homepage": "https://ever.co",
@@ -56,8 +56,8 @@
 		"@angular/router": "^12.2.10",
 		"@angular/service-worker": "^12.2.10",
 		"@ever-co/angular2-wizard": "^0.6.2",
-		"@ever-platform/common": "0.4.2",
-		"@ever-platform/common-angular": "0.4.1",
+		"@ever-platform/common": "^0.4.2",
+		"@ever-platform/common-angular": "^0.4.2",
 		"@ionic-native/barcode-scanner": "^5.36.0",
 		"@ionic-native/call-number": "^5.36.0",
 		"@ionic-native/camera": "^5.36.0",
