--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ever-demand",
-	"version": "0.4.2",
+	"version": "0.4.3",
 	"description": "Ever Demand - Open-Source Commerce Platform for On-Demand Economy and Digital Marketplaces",
 	"license": "AGPL-3.0",
 	"homepage": "https://ever.co",
@@ -51,14 +51,12 @@
 		"snyk-protect": "snyk protect"
 	},
 	"resolutions": {
-		"node-sass": "^6.0.1",
 		"@angular-devkit/build-angular": "~12.2.7",
 		"@angular-devkit/architect": "^0.1202.7",
 		"@angular-devkit/core": "^12.2.7",
 		"rxjs": "^7.4.0"
 	},
 	"dependencies": {
-		"node-sass": "^6.0.1",
 		"@angular/animations": "^12.2.10",
 		"@angular/common": "^12.2.10",
 		"@angular/compiler": "^12.2.10",
@@ -72,91 +70,7 @@
 		"rxjs": "^7.4.0",
 		"ng2-smart-table": "^1.7.2",
 		"ng2-completer": "^9.0.1",
-		"unleash": "^2.0.2",
-		"@ionic-native/barcode-scanner": "^5.36.0",
-		"@ionic-native/call-number": "^5.36.0",
-		"@ionic-native/camera": "^5.36.0",
-		"@ionic-native/core": "^5.36.0",
-		"@ionic-native/device": "^5.36.0",
-		"@ionic-native/dialogs": "^5.36.0",
-		"@ionic-native/geolocation": "^5.36.0",
-		"@ionic-native/globalization": "^5.36.0",
-		"@ionic-native/google-analytics": "^5.36.0",
-		"@ionic-native/google-maps": "~5.5.0",
-		"@ionic-native/in-app-browser": "^5.36.0",
-		"@ionic-native/intercom": "^5.36.0",
-		"@ionic-native/local-notifications": "^5.36.0",
-		"@ionic-native/mixpanel": "^5.36.0",
-		"@ionic-native/network": "^5.36.0",
-		"@ionic-native/splash-screen": "^5.36.0",
-		"@ionic-native/status-bar": "^5.36.0",
-		"@ionic-native/unique-device-id": "^5.36.0",
-		"@ionic-native/vibration": "^5.36.0",
-		"@ionic/angular": "^5.8.4",
-		"@ionic/pro": "^2.0.4",
-		"@ionic/storage": "^3.0.6",
-		"@ionic/storage-angular": "^3.0.6",
-		"ngx-progressbar": "^6.1.1",
-		"@ngx-translate/core": "^13.0.0",
-		"@ngx-translate/http-loader": "^6.0.0",
-		"apollo-angular": "^2.6.0",
-		"apollo-angular-link-http": "^1.11.0",
-		"apollo-angular-link-http-common": "^1.10.0",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
-		"apollo-link": "^1.2.14",
-		"apollo-link-context": "^1.0.20",
-		"apollo-link-ws": "^1.0.20",
-		"bootstrap": "^4.6.0",
-		"call-number": "^1.0.1",
-		"cordova-android": "^10.1.1",
-		"cordova-android-support-gradle-release": "^3.0.1",
-		"cordova-browser": "^6.0.0",
-		"cordova-plugin-androidx": "^3.0.0",
-		"cordova-plugin-androidx-adapter": "^1.1.3",
-		"cordova-plugin-appavailability": "^0.4.2",
-		"cordova-plugin-device": "^2.0.3",
-		"cordova-plugin-dialogs": "^2.0.2",
-		"cordova-plugin-geolocation": "^4.1.0",
-		"cordova-plugin-globalization": "^1.11.0",
-		"cordova-plugin-google-analytics": "^1.9.0",
-		"cordova-plugin-inappbrowser": "^5.0.0",
-		"cordova-plugin-intercom": "^10.2.0",
-		"cordova-plugin-ionic-keyboard": "^2.2.0",
-		"cordova-plugin-ionic-webview": "^5.0.0",
-		"cordova-plugin-mixpanel": "^4.7.2",
-		"cordova-plugin-splashscreen": "^6.0.0",
-		"cordova-plugin-statusbar": "^2.4.3",
-		"cordova-plugin-uniquedeviceid": "^1.3.2",
-		"cordova-plugin-vibration": "^3.1.1",
-		"cordova-plugin-whitelist": "^1.3.5",
-		"core-js": "^3.18.3",
-		"cryptiles": "^4.1.3",
-		"font-awesome": "^4.7.0",
-		"fstream": "^1.0.12",
-		"graphql": "^15.6.1",
-		"graphql-tag": "^2.12.5",
-		"handlebars": "^4.7.7",
-		"ionicons": "^5.5.3",
-		"jasmine": "^3.10.0",
-		"jsbarcode": "^3.11.5",
-		"lodash": "^4.17.21",
-		"lodash.mergewith": "^4.6.2",
-		"mx.ferreyra.callnumber": "0.0.2",
-		"neo-async": "^2.6.2",
-		"phonegap-plugin-barcodescanner": "^8.1.0",
-		"qrcode": "^1.4.4",
-		"reflect-metadata": "^0.1.13",
-		"sass-loader": "^12.2.0",
-		"save": "^2.4.0",
-		"socket.io-client": "^4.3.0",
-		"stripe": "^8.183.0",
-		"subscriptions-transport-ws": "^0.9.19",
-		"swiper": "^7.0.8",
-		"tslib": "^2.3.1",
-		"uglify-js": "^3.14.2",
-		"uuid": "^8.3.2",
-		"zone.js": "~0.11.4"
+		"unleash": "^2.0.2"
 	},
 	"devDependencies": {
 		"@angular-devkit/architect": "^0.1202.7",
@@ -172,12 +86,26 @@
 		"@commitlint/config-lerna-scopes": "^13.2.0",
 		"@commitlint/travis-cli": "^13.2.1",
 		"@compodoc/compodoc": "^1.1.15",
-		"@ionic/angular-toolkit": "^4.0.0",
-		"@ionic/app-scripts": "^3.2.4",
-		"@ionic/lab": "^3.2.10",
-		"@nestjs/cli": "^8.1.2",
-		"@nestjs/testing": "^8.1.1",
-		"@schematics/angular": "^12.2.10",
+		"@nrwl/angular": "^12.9.0",
+		"@nrwl/cli": "12.9.0",
+		"@nrwl/cypress": "^12.9.0",
+		"@nrwl/eslint-plugin-nx": "12.9.0",
+		"@nrwl/jest": "^12.9.0",
+		"@nrwl/linter": "12.9.0",
+		"@nrwl/nest": "^12.9.0",
+		"@nrwl/node": "^12.9.0",
+		"@nrwl/tao": "12.9.0",
+		"@nrwl/workspace": "^12.9.0",
+		"@nstudio/angular": "12.7.0",
+		"@nstudio/electron": "12.7.0",
+		"@nstudio/electron-angular": "12.7.0",
+		"@nstudio/web": "12.7.0",
+		"@nstudio/web-angular": "12.7.0",
+		"@nstudio/xplat": "^12.7.0",
+		"@semantic-release/changelog": "^5.0.1",
+		"@semantic-release/git": "^9.0.0",
+		"@semantic-release/github": "^7.2.1",
+		"@semantic-release/npm": "^7.1.1",
 		"@types/d3-color": "^3.0.2",
 		"@types/googlemaps": "^3.43.3",
 		"@types/hammerjs": "^2.0.40",
@@ -193,6 +121,7 @@
 		"@types/uuid": "^8.3.1",
 		"@types/webpack": "^5.28.0",
 		"@types/ws": "^8.2.0",
+		"@types/jest": "~25.1.4",
 		"@types/yargs": "^17.0.4",
 		"@webcomponents/webcomponentsjs": "^2.6.0",
 		"add-asset-html-webpack-plugin": "^3.2.0",
@@ -202,8 +131,13 @@
 		"autoprefixer": "^10.3.7",
 		"awesome-typescript-loader": "^5.2.1",
 		"clean-webpack-plugin": "^4.0.0",
+		"cypress": "8.3.1",
+		"@cypress/browserify-preprocessor": "^3.0.1",
+		"cypress-cucumber-preprocessor": "^4.2.0",
+		"cypress-file-upload": "^5.0.8",
 		"cloc": "^2.8.0",
 		"codelyzer": "^6.0.2",
+		"commitizen": "^4.2.1",
 		"concurrently": "^6.3.0",
 		"conventional-changelog": "^3.1.24",
 		"conventional-changelog-cli": "^2.1.1",
@@ -226,22 +160,11 @@
 		"html-webpack-plugin": "^5.4.0",
 		"husky": "^7.0.2",
 		"imports-loader": "^3.0.0",
-		"ionic": "^5.4.16",
 		"istanbul-instrumenter-loader": "^3.0.1",
 		"jasmine-core": "^3.10.0",
 		"jasmine-spec-reporter": "^7.0.0",
 		"jest": "^27.2.5",
 		"json-loader": "^0.5.7",
-		"karma": "^6.3.4",
-		"karma-chrome-launcher": "^3.1.0",
-		"karma-coverage": "^2.0.3",
-		"karma-coverage-istanbul-reporter": "^3.0.3",
-		"karma-jasmine": "^4.0.1",
-		"karma-jasmine-html-reporter": "^1.7.0",
-		"karma-mocha-reporter": "^2.2.5",
-		"karma-remap-coverage": "^0.1.5",
-		"karma-sourcemap-loader": "^0.3.8",
-		"karma-webpack": "^5.0.0",
 		"lerna": "^4.0.0",
 		"lerna-changelog": "^2.2.0",
 		"lerna-update-wizard": "^1.1.0",
@@ -269,7 +192,6 @@
 		"standard-version": "^9.3.1",
 		"string-replace-loader": "^3.0.3",
 		"style-loader": "^3.3.0",
-		"supertest": "^6.1.6",
 		"terser": "^5.9.0",
 		"terser-webpack-plugin": "^5.2.4",
 		"to-string-loader": "^1.1.6",
@@ -349,9 +271,7 @@
 			"**/@types/jasminewd2",
 			"**/@nebular",
 			"**/@angular*/**",
-			"**/@ngtools/**",
-			"**/@ngx-translate",
-			"**/@ngx-translate/**"
+			"**/@ngtools/**"
 		]
 	},
 	"engines": {
