--- a/packages/admin-web-angular/angular.json
+++ b/packages/admin-web-angular/angular.json
@@ -46,7 +46,7 @@
 							"../../node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
 							"../../node_modules/leaflet/dist/leaflet.css",
 							"src/app/@theme/styles/styles.scss",
-							"./node_modules/swiper/swiper-bundle.css",
+							"../../node_modules/swiper/swiper-bundle.css",
 							"../../node_modules/highlight.js/styles/github.css"
 						],
 						"stylePreprocessorOptions": {
