--- a/packages/common-angular/tsconfig.json
+++ b/packages/common-angular/tsconfig.json
@@ -6,9 +6,11 @@
 		"rootDir": "./src",
 		"paths": {
 			"@pyro/*": [
+				"@pyro/*",
 				"../../../node_modules/@ever-platform/common/src/@pyro/*"
 			],
 			"@modules/server.common/*": [
+				"@modules/server.common/*",
 				"../../../node_modules/@ever-platform/common/src/*"
 			]
 		}
