--- a/packages/common-angular/tsconfig.json
+++ b/packages/common-angular/tsconfig.json
@@ -15,10 +15,5 @@
 			]
 		}
 	},
-	"include": ["./src/**/*.ts"],
-	"references": [
-		{
-			"path": "../common"
-		}
-	]
+	"include": ["./src/**/*.ts", "../../common/**/*.ts",]
 }
