fix: theme icon loading issue

--- a/packages/admin-web-angular/tsconfig.json
+++ b/packages/admin-web-angular/tsconfig.json
@@ -10,6 +10,9 @@
 		"types": ["node", "jest", "reflect-metadata", "googlemaps", "jasmine"],
 		"paths": {
 			"@angular/*": ["../node_modules/@angular/*"],
+			"@nebular/*": [
+				"../../../node_modules/@nebular/*"
+			],
 			"@modules/server.common/*": ["../../common/src/*"],
 			"@modules/client.common.angular2/*": ["../../common-angular/src/*"],
 			"@pyro/*": ["../../common/src/@pyro/*"],
