--- a/packages/shop-mobile-ionic/package.json
+++ b/packages/shop-mobile-ionic/package.json
@@ -78,7 +78,7 @@
 		"@ionic/angular": "^5.8.4",
 		"@ionic/pro": "^2.0.4",
 		"@ionic/storage": "^3.0.6",
-		"ngx-progressbar": "^6.1.1",
+		"@ionic/storage-angular": "^3.0.6",
 		"@ngx-translate/core": "^13.0.0",
 		"@ngx-translate/http-loader": "^6.0.0",
 		"apollo-angular": "^2.6.0",
@@ -126,6 +126,7 @@
 		"lodash.mergewith": "^4.6.2",
 		"mx.ferreyra.callnumber": "0.0.2",
 		"neo-async": "^2.6.2",
+		"ngx-progressbar": "^6.1.1",
 		"phonegap-plugin-barcodescanner": "^8.0.1",
 		"pm2": "^5.1.2",
 		"qrcode": "^1.4.4",
