--- a/packages/carrier-mobile-ionic/angular.json
+++ b/packages/carrier-mobile-ionic/angular.json
@@ -42,12 +42,9 @@
 							"src/manifest.json"
 						],
 						"styles": [
-							{
-								"input": "src/theme/variables.scss"
-							},
-							{
-								"input": "src/global.scss"
-							}
+							"../../node_modules/font-awesome/scss/font-awesome.scss",
+							"src/theme/variables.scss",
+							"src/global.scss"
 						],
 						"scripts": []
 					},
@@ -97,6 +94,7 @@
 						"tsConfig": "src/tsconfig.spec.json",
 						"karmaConfig": "src/karma.conf.js",
 						"styles": [
+							"../../node_modules/font-awesome/scss/font-awesome.scss",
 							{
 								"input": "src/theme/variables.scss"
 							},
