--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -57,6 +57,7 @@
 		"@angular/core": "^12.2.10",
 		"@angular/forms": "^12.2.10",
 		"@angular/language-service": "^12.2.10",
+		"@angular/localize": "^12.2.11",
 		"@angular/platform-browser": "^12.2.10",
 		"@angular/platform-browser-dynamic": "^12.2.10",
 		"@angular/router": "^12.2.10",
