fix: underscore geo location products issue

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,6 +41,9 @@
 	"dependencies": {
 		"@captemulation/get-parameter-names": "^1.4.2",
 		"@ever-platform/common": "^0.4.3",
+		"@graphql-tools/load-files": "^6.5.1",
+		"@graphql-tools/merge": "^8.1.2",
+		"@graphql-tools/schema": "^8.2.0",
 		"@nestjs/common": "^8.1.1",
 		"@nestjs/core": "^8.1.1",
 		"@nestjs/cqrs": "^8.0.0",
@@ -81,9 +84,6 @@
 		"graphql-playground-middleware-express": "^1.7.22",
 		"graphql-subscriptions": "^1.2.1",
 		"graphql-tools": "^8.2.0",
-		"@graphql-tools/load-files": "^6.5.1",
-		"@graphql-tools/schema": "^8.2.0",
-		"@graphql-tools/merge": "^8.1.2",
 		"handlebars": "^4.7.7",
 		"image-size": "^1.0.0",
 		"install": "^0.13.0",
@@ -130,6 +130,7 @@
 		"symbol-observable": "^4.0.0",
 		"typeorm": "^0.2.38",
 		"typescript-collections": "^1.3.3",
+		"underscore": "^1.13.1",
 		"underscore.string": "^3.3.5",
 		"upath": "^2.0.1",
 		"uuid": "^8.3.2",
