--- a/packages/common-angular/tsconfig.json
+++ b/packages/common-angular/tsconfig.json
@@ -15,5 +15,8 @@
 			]
 		}
 	},
-	"include": ["./src/**/*.ts", "../../common/**/*.ts"]
+	"include": [
+		"./src/**/*.d.ts",
+		"../../common/**/*d.ts"
+	]
 }
