--- a/packages/admin-web-angular/package.json
+++ b/packages/admin-web-angular/package.json
@@ -143,6 +143,8 @@
 		"tinymce": "^5.10.0",
 		"tslib": "^2.3.1",
 		"typeface-exo": "^1.1.13",
+		"underscore": "^1.13.1",
+		"underscore.string": "^3.3.5",
 		"uuid": "^8.3.2",
 		"web-animations-js": "^2.3.2",
 		"zen-observable": "^0.8.15",
